# ttm4115-group-14

./: .gitignore  Dockerfile  README.md  StudentMachine.py  StudentUI.py  TimerCommandSender.py  pyproject.toml
hermes/: db.sqlite3
hermes/hermes/: settings.py  urls.py
hermes/studentapp/: statemachine.py  urls.py  views.py
hermes/studentapp/templates/: idle.html
src/hermes/: db.sqlite3  manage.py
src/hermes/accounts/: apps.py  authentication.py  managers.py  models.py  urls.py  views.py
src/hermes/accounts/migrations/: 0001_initial.py  0002_alter_group_managers.py  0003_task_alter_user_managers.py  0004_delivery.py
src/hermes/accounts/templates/: delivery.html  login.html
src/hermes/api/: apps.py  authentication.py  managers.py  models.py  urls.py  views.py  websocket.py
src/hermes/api/migrations/: 0001_initial.py
src/hermes/api/templates/: assist_group.html  authentication.html  delivery.html  login.html  progression_view.html  publish_task.html  task_form.html  teacher_home.html
src/hermes/hermes/: asgi.py  settings.py  urls.py  wsgi.py
src/hermes/state_machines/: StudentMachine.py  StudentMachineLogic.py  TeacherMachine.py  TeacherMachineLogic.py
src/hermes/student/: apps.py  urls.py  views.py
src/hermes/student/templates/: login.html  (+4 more)
src/hermes/studentapp/: apps.py  statemachine.py  urls.py  views.py
src/hermes/teacher/: apps.py  urls.py  views.py
src/state_machines/: StudentMachine.py  StudentUI.py  TeacherMachine.py  TeacherUI.py  TimerCommandSender.py  TimerManager.py
state_machines/: TeacherMachine.py  TeacherUI.py
(+5 files in other folders)
